removed google_id from model
