# api/routes/validation/announcement.js
@@ -7,14 +7,14 @@ announcement.create = {
     body: {
         message: Joi.string().required(),
         school_id: Joi.number().required(),
-        google_id: Joi.string().required(),
+        email: Joi.string().required(),
     }
 };
 
 announcement.update = {
     body: {
         announcement_id: Joi.number().required(),
-        google_id: Joi.string().required(),
+        email: Joi.string().required(),
         message: Joi.string().required()
     }
 };
@@ -22,13 +22,13 @@ announcement.update = {
 announcement.delete = {
     body: {
         announcement_id: Joi.number().required(),
-        google_id: Joi.string().required(),
+        email: Joi.string().required(),
     }
 };
 
 announcement.latest = {
     body: {
-        google_id: Joi.string().required(),
+        email: Joi.string().required(),
     }
 };
 
